--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less-loader": "^11.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-scripts": "5.0.1",
     "style-loader": "^3.3.3",
     "web-vitals": "^2.1.4"
